<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.edu.lewisu.cs.quinnrafferty.plantjournal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action android:id="@+id/show_plant_detail"
        app:destination="@id/plant_detail_fragment"/>

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.edu.lewisu.cs.quinnrafferty.plantjournal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">
        <action android:id="@+id/show_plant_detail"
        app:destination="@id/plant_detail_fragment"/>
    </fragment>
    <fragment
        android:id="@+id/nav_my_plants"
        android:name="com.edu.lewisu.cs.quinnrafferty.plantjournal.ui.MyPlants.MyPlantsFragment"
        android:label="@string/menu_my_plants"
        tools:layout="@layout/fragment_my_plants" >
    <action android:id="@+id/show_plant_detail"
        app:destination="@id/plant_detail_fragment"/>
    </fragment>
    <fragment
        android:id="@+id/plant_detail_fragment"
        android:name="com.edu.lewisu.cs.quinnrafferty.plantjournal.ui.MyPlants.MyPlantDetailFragment"
        android:label="Detail"
        tools:layout="@layout/plant_detail">

    </fragment>
</navigation>